# CV_coursework1

./: CSC3831_Coursework_P1.ipynb  README.md  pyproject.toml
