[project]
name = "cv-coursework1"
version = "0.1.0"
description = ""
authors = [
    {name = "c2024924",email = "S.Muppasani2@newcastle.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "missingno (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.0,<8.0.0)"
]
